--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<name>Raccoon</name>
 
 	<properties>
-		<jdk.version>1.6</jdk.version>
+		<jdk.version>1.7</jdk.version>
 	</properties>
 
 	<!--
@@ -21,6 +21,11 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -51,9 +56,27 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.1</version>
 			<configuration>
-				<target>1.6</target>
+				<source>1.7</source>
+				<target>1.7</target>
 				<compilerArgument>-Xlint:unchecked</compilerArgument>
 			</configuration>
+		</plugin>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>osxappbundle-maven-plugin</artifactId>
+			<version>1.0-alpha-1</version>
+			<configuration>
+				<mainClass>de.onyxbits.raccoon.App</mainClass>
+				<iconFile>${basedir}/src/main/resources/rsrc/icons/appicon.icns</iconFile>
+			</configuration>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>bundle</goal>
+					</goals>
+				</execution>
+			</executions>
 		</plugin>
 		<plugin>
 			<groupId>org.apache.maven.plugins</groupId>
@@ -95,5 +118,4 @@
 		</plugin>
 	</plugins>
   </build>
-
 </project>
