--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,20 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.1</version>
 			<configuration>
-				<source>1.7</source>
-				<target>1.7</target>
+				<source>1.6</source>
+				<target>1.6</target>
 				<compilerArgument>-Xlint:unchecked</compilerArgument>
 			</configuration>
 		</plugin>
 		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
+			<groupId>com.agiliumlabs.osxappbundle</groupId>
 			<artifactId>osxappbundle-maven-plugin</artifactId>
-			<version>1.0-alpha-1</version>
+			<version>1.0.0</version>
 			<configuration>
 				<mainClass>de.onyxbits.raccoon.App</mainClass>
+				<bundleName>Raccoon</bundleName>
 				<iconFile>${basedir}/src/main/resources/rsrc/icons/appicon.icns</iconFile>
+				<jvmVersion>1.6</jvmVersion>
 			</configuration>
 			<executions>
 				<execution>
